# ProyectoRAU

autproject/: CMakeLists.txt  package.xml
autproject/launch/: mundo_proyecto.launch
autproject/msg/: Camdet.msg
autproject/src/: deteccion_proy  figures.py  identified_points.txt  nav  nav_prueba2
autproject/worlds/: mundo_proyecto.world  turtlebot3_world3.world  turtlebot3_worldlatas.world
